--- a/elika-warehouse/views/tmpl/inventory/view-device.html
+++ b/elika-warehouse/views/tmpl/inventory/view-device.html
@@ -91,7 +91,7 @@
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Hardware Version</label><br/>
-														<select class="form-control" ng-model="upgradeFirmware.hardware_version" required="required" ng-options="version for version in hardwareVersions">
+														<select class="form-control" ng-model="upgradeFirmware.hardware_version" required="required" ng-options="version for version in hardwareVersions" ng-change="firmwareVersionViewInventry(upgradeFirmware.hardware_version)">
 														<option value="">Select</option>
 														</select>
 														<!-- <select class="form-control">
@@ -103,12 +103,12 @@
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Firmware Version</label><br/>
-														<input type="text" class="form-control" ng-model="upgradeFirmware.firmware_version" required="required">
-														<!-- <select class="form-control">
-															<option>V1.0</option>
-															<option>V1.1</option>
-															<option>V1.2</option>
-														</select> -->
+														<!-- <input type="text" class="form-control" ng-model="upgradeFirmware.firmware_version" required="required"> -->
+														<select class="form-control" type="text" ng-model="upgradeFirmware.firmware_version"
+														ng-options="x for x in listFirmware"
+														required="required">
+														<option value="">Select</option>
+														</select>
 													</div>
 												</div>
 												<!-- <div class="row">
