--- a/elika-warehouse/views/tmpl/firmware/firmware-management.html
+++ b/elika-warehouse/views/tmpl/firmware/firmware-management.html
@@ -86,9 +86,8 @@
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Hardware Version</label><br/>
-														<select class="form-control" ng-model="addFirmware.hardware_version" ng-options="version for version in hardwareVersions" >
-															<option value="">Select</option>
-														</select>
+														<input class="form-control" ng-model="addFirmware.hardware_version">
+															
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Firmware Version</label><br/>
