--- a/elika-warehouse/views/tmpl/firmware/firmware-management.html
+++ b/elika-warehouse/views/tmpl/firmware/firmware-management.html
@@ -86,16 +86,15 @@
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Hardware Version</label><br/>
-														<input class="form-control" ng-model="addFirmware.hardware_version">
-															
+														<select class="form-control" ng-model="addFirmware.hardware_version" ng-options="version for version in hardwareVersions" >
+															<option value="">Select</option>
+														</select>
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Firmware Version</label><br/>
-														<select class="form-control" type="text" ng-model="addFirmware.firmware_version"
-														ng-options="x for x in listFirmware"
+														<input class="form-control" type="text" ng-model="addFirmware.firmware_version"				
 														>
-														<option value="">Select</option>
-														</select>
+														
 													</div>
 												</div>
 												<div class="row">
