--- a/elika-warehouse/views/tmpl/firmware/view-firmware.html
+++ b/elika-warehouse/views/tmpl/firmware/view-firmware.html
@@ -63,18 +63,18 @@
 			<div class="col-sm-12 col-md-4">
 				<section class="tile tile-simple">
 					<div class="leftdetail tile-widget p-30 text-center">
-						<h3 class="mb-10"><strong>Main Board</strong></h3>
-						<span class="text-muted">Elika 76</span>
-						<span class="text-muted">Active</span>
+						<h3 class="mb-10"><strong>{{firmwareData.firmware_component }}</strong></h3>
+						<span class="text-muted">{{firmwareData.firmware_model }}</span>
+						<!-- <span class="text-muted">Active</span> -->
 						<div class="mt-40">
 							<!--a ui-sref="app.inventory.edit-device" class="btn btn-rounded-20 btn-sm btn-greensea mr-5">Update Device</a-->
-							<a ng-click="showConfirm($event)" class="btn btn-rounded-20 btn-sm bg-danger">Delete Device</a>
+							<a ng-click="showConfirm($event,firmwareData.firmware_id)" class="btn btn-rounded-20 btn-sm bg-danger">Delete Device</a>
 						</div>
 					</div>
 				</section>
 			</div>
 			
-			<div class="col-sm-12 col-md-8" ng-controller="ViewFirmwareCtrl"> 
+			<div class="col-sm-12 col-md-8" > 
 				<section class="tile tile-simple"> 
 					<div class="tile-body p-0">
 						<div class="tile-header dvd dvd-btm">
@@ -113,14 +113,17 @@
 								<div class="row">
 									<div class="col-sm-12 col-md-12">
 										<div class="form-group profiledetail">
-											<p><label>Create Date</label> 2016/08/01 17:52:03</p>
-											<p><label>Component</label> Main Board</p>
-											<p><label>Device Model</label> Elika 76</p>
-											<p><label>Hardware Version</label> A0</p>
-											<p><label>Firmware Version</label> 010007</p>
-											<p><label>File Structure Version</label> 010001</p>
-											<p><label>Upgrade Device</label> Manual Upgrade<span class="pull-right w-60"><a ng-click="open()" href="" class="text-danger text-sm"><strong>Edit</strong></a></span></p>
-											<p><label>Description</label><br/>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
+											<p><label>Create Date</label> {{firmwareData.firmware_created_on*1000 | date}}</p>
+											<p><label>Component</label> {{firmwareData.firmware_component }}</p>
+											<p><label>Device Model</label> {{firmwareData.firmware_model }}</p>
+											<p><label>Hardware Version</label> {{firmwareData.firmware_hardware_version }}</p>
+											<p><label>Firmware Version</label> {{firmwareData.firmware_version }}</p>
+											<p><label>File Structure Version</label> XXXX</p>
+											<p><label>Upgrade Device</label> XXXXXXX<span class="pull-right w-60">
+											<!-- <a ng-click="open()" href="javascript:void(0);" class="text-danger text-sm" ><strong>Edit</strong></a> -->
+											<a class="text-danger text-sm" ><strong>Edit</strong></a>
+											</span></p>
+											<p><label>Description</label><br/>{{firmwareData.firmware_description }}</p>
 										</div>
 									</div>
 								</div>
