--- a/views/tmpl/admin/administrator/roles.html
+++ b/views/tmpl/admin/administrator/roles.html
@@ -84,7 +84,7 @@
 			</div>			
 		</div>
 		
-		<div class="row" ng-controller="RoleCtrl">
+		<div class="row">
 			<div class="col-md-12">
 				<section class="tile box-shadow" fullscreen="isFullscreen06">
 					<div class="tile-header dvd dvd-btm">
@@ -153,9 +153,9 @@
 									<md-content>			
 										<md-card ng-repeat="role in aroles | limitTo:totalDisplayed | filter:text | filter:title | filter:status | orderBy:myOrderBy">											
 											<md-card-content>
-												<h2 class="md-title">{{ role.title }}</h2>
-												<p>{{ role.status }}</p>
-												<p>{{ role.access }}</p>
+												<h2 class="md-title">{{ role.role_name }}</h2>
+												<!-- <p>{{ role.status }}</p>
+												<p>{{ role.access }}</p> -->
 											<div class="md-actions" layout="row" layout-align="center center">
 												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.administrator.view-roles">View</a>
 												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.admin.administrator.edit-roles">Edit</a>
