--- a/views/tmpl/admin/activity.html
+++ b/views/tmpl/admin/activity.html
@@ -129,9 +129,9 @@
 										<div class="col-sm-3 col-md-3" ng-controller="DatepickerDemoCtrl">
 											<label for="">Date/Time</label>
 											<div class="input-group">
-												<input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="$parent.date" is-open="opened" datepicker-options="dateOptions" ng-required="true" required="required" close-text="Close" onkeypress="return false;" />
+												<input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="$parent.date" is-open="opened" datepicker-options="dateOptions" ng-required="true" disabled="" close-text="Close" onkeypress="return false;" />
 												<span class="input-group-btn">
-													<button type="button" class="btn btn-default" ng-click="open($event)" style="padding: 8px 14px;"><i class="glyphicon glyphicon-calendar"></i></button>
+													<button type="button" class="btn btn-default" ng-click="open($event)" disabled="" style="padding: 8px 14px;"><i class="glyphicon glyphicon-calendar" ></i></button>
 												</span>
 											</div>
 										</div>
