--- a/views/header.html
+++ b/views/header.html
@@ -33,6 +33,7 @@
 					<li><a ui-sref="app.admin.user.users">Users</a></li>
 					<li><a ui-sref="app.admin.user.add-user">Add User</a></li>
 					<li><a ui-sref="app.admin.user.user-groups">User Groups</a></li>
+					<li><a ui-sref="app.admin.support.technician">Technician</a></li>
 				</ul>
 			</li>
 			<li class="dropdown" uib-dropdown>
