device settings issue

--- a/views/tmpl/admin/support/technician.html
+++ b/views/tmpl/admin/support/technician.html
@@ -104,31 +104,31 @@
 																<div class="form-group row">
 																	<div class="col-sm-6 col-md-6">
 																		<label for="">First Name</label>
-																		<input type="text" name="" id="" class="form-control" placeholder="" ng-model="addTechnician.first_name">
+																		<input type="text" name="" id="" class="form-control" placeholder="" ng-model="addTechnician.first_name" required="required">
 																	</div>
 																	<div class="col-sm-6 col-md-6">												
 																		<label for="">Last Name</label>
-																		<input type="text" name="" id="" class="form-control" placeholder="" ng-model="addTechnician.last_name">													
+																		<input type="text" name="" id="" class="form-control" placeholder="" ng-model="addTechnician.last_name" required="required">													
 																	</div>
 																</div>
 																<div class="form-group row">
 																	<div class="col-sm-6 col-md-6">
 																		<label for="">Email Address</label>
-																		<input type="email" name="" id="" class="form-control" placeholder=""  ng-model="addTechnician.email">
+																		<input type="email" name="" id="" class="form-control" placeholder=""  ng-model="addTechnician.email" required="required">
 																	</div>
 																	<div class="col-sm-6 col-md-6">																		
 																		<label for="">Phone Number</label>
-																		<input type="text" name="" id="" class="form-control" placeholder="" ng-model="addTechnician.phone_number">
+																		<input type="text" name="" id="" class="form-control" placeholder="" ng-model="addTechnician.phone_number" required="required">
 																	</div>
 																</div>
 																<div class="form-group row">																	
 																	<div class="col-sm-6 col-md-6">
 																		<label for="">Address</label>
-																		<input type="text" name="" id="" class="form-control" placeholder="" ng-model="addTechnician.address">
+																		<input type="text" name="" id="" class="form-control" placeholder="" ng-model="addTechnician.address" required="required">
 																	</div>
 																	<div class="col-sm-6 col-md-6">
 																		<label for="">Zip Code</label>
-																		<input type="text" name="" id="" class="form-control" placeholder="" ng-model="addTechnician.zipcode">
+																		<input type="text" name="" id="" class="form-control" placeholder="" ng-model="addTechnician.zipcode" required="required">
 																	</div>
 																</div>
 																<div class="form-group row" >
