--- a/views/tmpl/admin/support/technician.html
+++ b/views/tmpl/admin/support/technician.html
@@ -118,7 +118,9 @@
 																	</div>
 																	<div class="col-sm-6 col-md-6">																		
 																		<label for="">Phone Number</label>
-																		<input type="text" name="" id="" class="form-control" placeholder="" ng-model="addTechnician.phone_number" required="required">
+																		<input type="text" name="" id="" class="form-control" placeholder="" ng-model="addTechnician.phone_number" 
+																		pattern="^\+[1-9]{1}[0-9]{3,14}$" oninvalid="setCustomValidity('Please enter valid mobile number')" onchange="try{setCustomValidity('')}catch(e){}"
+																		required="required">
 																	</div>
 																</div>
 																<div class="form-group row">																	
